--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +12,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "antd": "^5.0.0",
     "daisyui": "^2.41.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
@@ -19,6 +20,7 @@
     "pocketbase": "^0.7.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
